--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
         android:theme="@style/Theme.WhereIsMyBus"
         tools:targetApi="31">
         <activity
+            android:name=".Track"
+            android:exported="false"
+            android:label="@string/title_activity_track"
+            android:theme="@style/Theme.WhereIsMyBus" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
